# abcd-graph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ABCD.py  CHANGELOG.md  Dataset_Reader.py  Demo.ipynb  Dockerfile  Hypergraph_Functions.py  Hypergraph_Models.py  Hypergraph_Processes.py  LICENSE  README.md  Simplicial_Functions.py  profiling_report.py  publish.sh  pyproject.toml
.github/: pull_request_template.md  release_procedure.md
.github/actions/test/: action.yml
.github/workflows/: ci.yml  coverage.yml  docker-in-ci.yml  pr-title.yml  pre-commit.yml  profiling.yml  release.yml  test.yml
.ipynb_checkpoints/: Hypergraph_Models-checkpoint.py
datasets/: NDC-substances.txt  README.txt  contact-high-school.txt  contact-primary-school.txt  diseasome.txt  disgenenet.txt  email-enron.txt  email-eu.txt  hospital-lyon.txt  tags-ask-ubuntu.txt  test.txt
examples/: 0.3demo.ipynb  demo.ipynb
experiments/: Component_Size_Experiment.py  Component_Size_Experiment_2.py  Degree_vs_Edge_Size_Experiment.py  README.txt  Simple Generator.ipynb  four_matrices.ipynb  inclusions.ipynb
profiling/: scaling_report.py
src/abcd_graph/: ABCD.py  __init__.py  abcd.py  abcd_params.py  abcdgraph.py  core.py  exporter.py  graph.py  logger.py  models.py  params.py  rng.ipynb  typing.py  utils.py  version.py
src/abcd_graph/api/: abcd_community.py  abcd_models.py  abcd_params.py
src/abcd_graph/callbacks/: __init__.py  abstract.py  property_collector.py  stats_collector.py  visualizer.py
src/abcd_graph/core/: __init__.py  build.py  exceptions.py  exporter.py  models.py  utils.py
src/abcd_graph/core/abcd_objects/: abcd_graph.py  abstract.py  community.py  graph_impl.py  utils.py
src/abcd_graph/graph/: __init__.py  community.py  graph.py
src/abcd_graph/graph/core/: build.py  constants.py  utils.py
src/abcd_graph/graph/core/abcd_objects/: __init__.py  abstract.py  community.py  edge.py  graph_impl.py  utils.py
tests/: conftest.py  pytest.ini  test_abcd.py  test_abcd_params.py  test_core.py  test_exporter.py  test_logging.py  test_utils.py  utils.py
tests/abcd_graph/: test_graph.py  test_xi_matrix.py
tests/callbacks/: test_abstract.py  test_property_collector.py  test_stats_collector.py  test_visualizer.py
tests/core/: test_build.py  test_exporter.py  test_utils.py
tests/core/abcd_objects/: test_graph_impl.py
