[tool.poetry]
name = "abcd-graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "abcd_graph", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
typing-extensions = "^4.10.0"
pydantic = "^2.6.4"

# dev
pre-commit = { version = "^3.7.0", optional = true }
pytest = { version = "^8.1.1", optional = true }

# integrations
networkx = { version = "^3.3", optional = true }
matplotlib = { version = "^3.9.0", optional = true }


[tool.poetry.extras]
dev = [
    "pre-commit",
    "pytest",
]
networkx = ["networkx"]
matplotlib = ["matplotlib"]

all = [
    "pre-commit",
    "pytest",
    "networkx",
    "matplotlib",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 2

[tool.mypy]
files = "src/abcd_graph"
mypy_path = "stubs"
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
show_error_codes = "True"
warn_unused_ignores = "True"
